--- a/css/styles.css
+++ b/css/styles.css
@@ -391,7 +391,6 @@ address {
 .footer .container {
   display: flex;
   align-items: baseline;
-  justify-content: space-between;
 }
 .footer-logo {
   display: block;
@@ -421,6 +420,9 @@ address {
 .footer-link-contacts:hover,
 .footer-link-contacts:focus {
   color: var(--hover-color);
+}
+.footer-connect {
+  margin-left: 70px;
 }
 .footer-title {
   font-weight: 700;
@@ -464,6 +466,9 @@ address {
 .footer-form {
   display: flex;
 }
+.footer-form-wrap {
+  margin-left: auto;
+}
 .footer-input {
   width: 358px;
   height: 50px;
@@ -473,6 +478,14 @@ address {
   border-radius: 4px;
   margin-right: 12px;
   padding-left: 16px;
+  color: rgba(255, 255, 255, 0.6);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input:focus {
+  border-color: var(--hover-color);
+}
+.footer-input:hover {
+  border: 1px solid var(--hover-color);
 }
 .footer-submit {
   min-width: 200px;
@@ -482,13 +495,18 @@ address {
   line-height: 1.88;
   letter-spacing: 0.06em;
   color: var(--white-color);
-  background: #2196f3;
+  background-color: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-submit:hover {
+  background-color: #188ce8;
 }
 .icon-footer-submit {
   margin-left: 12px;
@@ -652,6 +670,7 @@ li > .all {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-close-btn:hover,
 .modal-close-btn:focus {
@@ -669,8 +688,12 @@ li > .all {
   color: #212121;
   margin-bottom: 12px;
 }
-.modal-field {
-  padding-bottom: 10px;
+.modal-field:not(:last-child) {
+  margin-bottom: 10px;
+}
+.modal-field:hover input,
+.modal-field:hover textarea {
+  border: 1px solid var(--hover-color);
 }
 .modal-input {
   width: 100%;
@@ -680,6 +703,7 @@ li > .all {
   padding-left: 42px;
   outline: none;
   fill: var(--default-color);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-input:focus {
   border-color: var(--hover-color);
@@ -710,6 +734,11 @@ li > .all {
   border-radius: 4px;
   padding-top: 12px;
   padding-left: 16px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-text:focus {
+  border-color: var(--hover-color);
 }
 .submit-wrap {
   display: flex;
@@ -733,6 +762,11 @@ li > .all {
   justify-content: center;
   letter-spacing: 0.06em;
   color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-submit:hover,
+.modal-submit:focus {
+  background-color: #1472bf;
 }
 .input-wrap {
   position: relative;
